--- a/pom.xml
+++ b/pom.xml
@@ -121,13 +121,13 @@
 				<artifactId>versions-maven-plugin</artifactId>
 				<version>2.1</version>
 				<executions>
-					<!-- <execution> -->
-					<!-- <phase>compile</phase> -->
-					<!-- <goals> -->
-					<!-- <goal>display-dependency-updates</goal> -->
-					<!-- <goal>display-plugin-updates</goal> -->
-					<!-- </goals> -->
-					<!-- </execution> -->
+					<execution>
+					<phase>compile</phase>
+					<goals>
+					<goal>display-dependency-updates</goal>
+					<goal>display-plugin-updates</goal>
+					</goals>
+					</execution>
 				</executions>
 			</plugin>
 			<plugin>
